# ToDoList

ToDoList-master/: CMakeLists.txt  README.md  main.cpp
ToDoList-master/enums/: GetType.hpp  SortType.hpp
ToDoList-master/include/: Functions.hpp  JsonTaskStorage.hpp  Task.hpp  TaskList.hpp  TaskService.hpp
ToDoList-master/interface/: ITaskStorage.hpp
ToDoList-master/json/: exampleData.json  file_name.txt  json.hpp
ToDoList-master/src/: JsonTaskStorage.cpp  Task.cpp  TaskList.cpp  TaskService.cpp
ToDoList-master/tests/: TestJsonTaskStorage.cpp  TestTaskService.cpp  TestVars.hpp  testData.json  testTask.cpp  testTaskList.cpp
